# legal_agentic_rag

./: .gitignore  .npmrc  AGENTS.md  README.md  README_IMPORT.md  public_dataset.json
.agentfirst/: golden_principles.md  policies.yaml  stack.yaml
apps/api/: README.md  pyproject.toml
apps/api/src/legal_rag_api/: __init__.py  artifacts.py  azure_llm.py  case_extraction_pg.py  contracts.py  corpus_pg.py  main.py  official_submission.py  otel.py  runtime_pg.py  state.py  state_pg.py  storage.py  telemetry.py
apps/api/src/legal_rag_api/routers/: config.py  corpus.py  eval.py  experiments.py  gold.py  qa.py  review.py  runs.py  synth.py
docs/: ARCHITECTURE.md  PLANS.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  web-console-e2e.md
openapi/: legal-rag-openapi.yaml
reports/: cross_law_compare_vertical_slice.md  law_article_vertical_slice.md  law_history_vertical_slice.md  official_dataset_access_policy.md  router_benchmark_delta.md  router_benchmark_summary.md  scorer_regression_summary.md
schemas/: case_chunk_facet.schema.json  case_document.schema.json  chunk_base.schema.json  chunk_search_document.schema.json  document_base.schema.json  document_manifest.schema.json  enactment_notice_chunk_facet.schema.json  enactment_notice_document.schema.json  eval_run.schema.json  gold_dataset.schema.json  gold_question.schema.json  law_chunk_facet.schema.json  law_document.schema.json  page_model.schema.json  page_ref.schema.json  paragraph_chunk.schema.json  public_question_taxonomy_row.schema.json  query_request.schema.json  query_response.schema.json  (+8 more)
(+336 files in other folders)
